--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="column">
-        <image src="Boracay.jpg" alt="Boracay">
+        <image src="boracay.jpg" alt="Boracay">
         <h2>Boracay</h2>
         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua."</p>
@@ -70,13 +70,13 @@
     </div>
 
     <div class="column">
-        <image src="Bohol.jpg" alt="Bohol">
+        <image src="bohol.jpg" alt="Bohol">
         <h2>Bohol</h2>
         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua."</p>
     </div>
     <div class="column">
-        <image src="Palawan.jpg" alt="Palawan">
+        <image src="palawan.jpg" alt="Palawan">
         <h2>Palawan</h2>
         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua."</p>
